--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.3",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.3.4",
+    "firebase": "^9.6.1",
     "next": "latest",
+    "next-auth": "^4.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.5.2",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
