--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
     "firebase": "^9.6.4",
-    "next": "latest",
+    "firebase-admin": "^11.4.1",
+    "next": "12.3.0",
+    "next-auth": "^4.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
